--- a/laokou-service/pom.xml
+++ b/laokou-service/pom.xml
@@ -16,9 +16,7 @@
  * limitations under the License.
  */
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>io.github.koushenhai</groupId>
         <artifactId>laokou-parent</artifactId>
@@ -34,7 +32,6 @@
         <module>laokou-admin</module>
         <module>laokou-generator</module>
         <module>laokou-module</module>
-        <module>laokou-report</module>
         <module>laokou-auth</module>
     </modules>
 </project>
