--- a/laokou-cloud/laokou-seata/pom.xml
+++ b/laokou-cloud/laokou-seata/pom.xml
@@ -14,23 +14,23 @@
         <!--spring-boot版本-->
         <spring-boot.version>2.7.10</spring-boot.version>
         <!--mysql版本-->
-        <mysql.version>8.0.31</mysql.version>
+        <mysql.version>8.0.32</mysql.version>
         <!--kafka-appender版本-->
         <kafka-appender.version>0.2.0-RC2</kafka-appender.version>
         <!--jedis版本-->
-        <jedis.version>3.2.0</jedis.version>
+        <jedis.version>5.0.0-alpha2</jedis.version>
         <!--mock-jedis版本-->
-        <mock-jedis.version>0.3.0</mock-jedis.version>
+        <mock-jedis.version>0.3.1</mock-jedis.version>
         <!--fastjson版本-->
-        <fastjson.version>1.2.83</fastjson.version>
+        <fastjson.version>2.0.32</fastjson.version>
         <!--logback版本-->
-        <logback.version>1.2.9</logback.version>
+        <logback.version>1.4.7</logback.version>
         <!--logstash-logback-encoder版本-->
-        <logstash-logback-encoder.version>6.5</logstash-logback-encoder.version>
+        <logstash-logback-encoder.version>7.3</logstash-logback-encoder.version>
         <!--druid版本-->
         <druid.version>1.2.16</druid.version>
         <!--jcommander版本-->
-        <jcommander.version>1.72</jcommander.version>
+        <jcommander.version>1.82</jcommander.version>
     </properties>
 
     <dependencies>
