--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -87,6 +87,7 @@
         <module>laokou-common-idempotent</module>
         <module>laokou-common-lock</module>
         <module>laokou-common-monitor</module>
+        <module>laokou-common-influxdb</module>
     </modules>
 
 </project>
