--- a/laokou-common/laokou-common-shardingsphere/pom.xml
+++ b/laokou-common/laokou-common-shardingsphere/pom.xml
@@ -15,8 +15,12 @@
             <artifactId>shardingsphere-jdbc-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-nacos</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
         </dependency>
     </dependencies>
 
