--- a/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-server/src/main/resources/application.yml
@@ -40,10 +40,10 @@ spring:
       datasource:
         # https://shardingsphere.apache.org/document/5.1.2/en/user-manual/shardingsphere-jdbc/jdbc-driver
         shardingSphere:
-          url: jdbc:shardingsphere:classpath:shardingsphere.yaml
+          url: jdbc:shardingsphere:nacos:application-common-shardingsphere.yaml
           driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
         shardingSphereReadWrite:
-          url: jdbc:shardingsphere:classpath:shardingsphere-readwrite.yaml
+          url: jdbc:shardingsphere:nacos:application-common-shardingsphere-readwrite.yaml
           driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
   cloud:
     # sentinel
