--- a/laokou-common/laokou-common-shardingsphere/pom.xml
+++ b/laokou-common/laokou-common-shardingsphere/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-jasypt</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
