--- a/laokou-service/laokou-auth/laokou-auth-client/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-client/pom.xml
@@ -26,4 +26,11 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-auth-client</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
