--- a/laokou-common/laokou-common-xss/pom.xml
+++ b/laokou-common/laokou-common-xss/pom.xml
@@ -10,4 +10,11 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>laokou-common-xss</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-core</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
