--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -79,10 +79,10 @@ spring:
       ignored-interfaces:
         - docker0
         - veth.*
-  # 开启虚拟线程
+  # 不开启虚拟线程
   threads:
     virtual:
-      enabled: true
+      enabled: false
 
 logging:
   config: classpath:log4j2-@PROFILE-ACTIVE@.xml
