--- a/laokou-common/laokou-common-rocketmq/pom.xml
+++ b/laokou-common/laokou-common-rocketmq/pom.xml
@@ -15,7 +15,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <artifactId>rocketmq-v5-client-spring-boot-starter</artifactId>
+            <version>2.3.0</version>
         </dependency>
     </dependencies>
 
