--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,8 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn clean package -DskipTests
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.1.0
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: KouShenhai/KCloud-Platform-Alibaba
