--- a/laokou-common/laokou-common-elasticsearch/pom.xml
+++ b/laokou-common/laokou-common-elasticsearch/pom.xml
@@ -9,18 +9,13 @@
     <artifactId>laokou-common-elasticsearch</artifactId>
 
     <dependencies>
-<!--        <dependency>-->
-<!--            <groupId>co.elastic.clients</groupId>-->
-<!--            <artifactId>elasticsearch-java</artifactId>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>7.17.18</version>
+            <groupId>co.elastic.clients</groupId>
+            <artifactId>elasticsearch-java</artifactId>
         </dependency>
     </dependencies>
 
