--- a/laokou-cloud/laokou-sentinel/pom.xml
+++ b/laokou-cloud/laokou-sentinel/pom.xml
@@ -13,7 +13,7 @@
         <!--sentinel版本-->
         <sentinel.version>1.8.7</sentinel.version>
         <!--spring-boot版本-->
-        <spring-boot.version>2.7.18</spring-boot.version>
+        <spring-boot.version>2.5.12</spring-boot.version>
         <!--curator版本-->
         <curator.version>5.6.0</curator.version>
         <!--log4j版本-->
@@ -40,6 +40,7 @@
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-core</artifactId>
+            <version>${sentinel.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.csp</groupId>
@@ -49,6 +50,7 @@
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-transport-simple-http</artifactId>
+            <version>${sentinel.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba.csp</groupId>
@@ -117,6 +119,7 @@
         <dependency>
             <groupId>com.alibaba.csp</groupId>
             <artifactId>sentinel-datasource-nacos</artifactId>
+            <version>${sentinel.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
