--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -22,12 +22,12 @@
 
     <groupId>org.laokou</groupId>
     <artifactId>laokou-common-bom</artifactId>
-    <version>3.2.3</version>
+    <version>3.2.4</version>
     <packaging>pom</packaging>
     <properties>
-        <laokou.version>3.2.3</laokou.version>
+        <laokou.version>3.2.4</laokou.version>
         <!--spring-boot版本-->
-        <spring-boot.version>3.2.3</spring-boot.version>
+        <spring-boot.version>3.2.4-SNAPSHOT</spring-boot.version>
         <!--lombok版本-->
         <lombok.version>1.18.30</lombok.version>
         <!--mysql版本-->
@@ -63,7 +63,7 @@
         <!--easyexcel版本-->
         <easyexcel.version>3.3.4</easyexcel.version>
         <!--spring-security-oauth2-authorization-server版本-->
-        <spring-security-oauth2-authorization-server.version>1.2.2</spring-security-oauth2-authorization-server.version>
+        <spring-security-oauth2-authorization-server.version>1.2.3-SNAPSHOT</spring-security-oauth2-authorization-server.version>
         <!--spring-boot-starter-oauth2-resource-server版本-->
         <spring-boot-starter-oauth2-resource-server.version>3.2.3</spring-boot-starter-oauth2-resource-server.version>
         <!--aws-java-sdk-s3版本-->
