--- a/laokou-release/pom.xml
+++ b/laokou-release/pom.xml
@@ -34,6 +34,7 @@
     <description>一个企业级微服务架构的云服务多租户SaaS平台</description>
     <url>https://koushenhai.github.io/KCloud-Platform-Alibaba</url>
     <properties>
+        <nacos.version>3.2.1</nacos.version>
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
@@ -44,10 +45,7 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.laokou</groupId>
-            <artifactId>laokou-common-core</artifactId>
-        </dependency>
+
     </dependencies>
 
     <distributionManagement>
