--- a/laokou-service/laokou-mqtt/laokou-mqtt-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-mqtt/laokou-mqtt-start/src/main/resources/application.yml
@@ -16,6 +16,34 @@ server:
   shutdown: graceful
   forward-headers-strategy: native
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+  tracing:
+    enabled: true
+    propagation:
+      type: w3c
+    # 采样率 => 100%
+    sampling:
+      probability: 1
+  otlp:
+    tracing:
+      endpoint: http://otel-collector:4317/v1/traces
+      compression: gzip
+      timeout: 10s
+      transport: grpc
+    metrics:
+      export:
+        enabled: false
+  metrics:
+    tags:
+      application: ${spring.application.name}
+
 spring:
   application:
     name: ${SERVICE_ID:laokou-mqtt}
@@ -24,11 +52,6 @@ spring:
   threads:
     virtual:
       enabled: true
-  mqtt-server:
-    auth: true
-    username: vertx
-    password: laokou123
-    thread-size: 8192
   kafka:
     bootstrap-servers: kafka:9092
     consumer:
@@ -65,31 +88,130 @@ spring:
       missing-topics-fatal: false
     admin:
       auto-create: false
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    health:
-      show-details: always
-  tracing:
-    enabled: true
-    propagation:
-      type: w3c
-    # 采样率 => 100%
-    sampling:
-      probability: 1
-  otlp:
-    tracing:
-      endpoint: http://otel-collector:4317/v1/traces
-      compression: gzip
-      timeout: 10s
-      transport: grpc
-    metrics:
-      export:
-        enabled: false
-  metrics:
-    tags:
-      application: ${spring.application.name}
+  mqtt-server:
+    auth: true
+    username: vertx
+    password: laokou123
+    # 创建120个端口
+    ports:
+      - 1880
+      - 1881
+      - 1882
+      - 1883
+      - 1884
+      - 1885
+      - 1886
+      - 1887
+      - 1888
+      - 1889
+      - 1890
+      - 1891
+      - 1892
+      - 1893
+      - 1894
+      - 1895
+      - 1896
+      - 1897
+      - 1898
+      - 1899
+      - 1900
+      - 1901
+      - 1902
+      - 1903
+      - 1904
+      - 1905
+      - 1906
+      - 1907
+      - 1908
+      - 1909
+      - 1910
+      - 1911
+      - 1912
+      - 1913
+      - 1914
+      - 1915
+      - 1916
+      - 1917
+      - 1918
+      - 1919
+      - 1920
+      - 1921
+      - 1922
+      - 1923
+      - 1924
+      - 1925
+      - 1926
+      - 1927
+      - 1928
+      - 1929
+      - 1930
+      - 1931
+      - 1932
+      - 1933
+      - 1934
+      - 1935
+      - 1936
+      - 1937
+      - 1938
+      - 1939
+      - 1940
+      - 1941
+      - 1942
+      - 1943
+      - 1944
+      - 1945
+      - 1946
+      - 1947
+      - 1948
+      - 1949
+      - 1950
+      - 1951
+      - 1952
+      - 1953
+      - 1954
+      - 1955
+      - 1956
+      - 1957
+      - 1958
+      - 1959
+      - 1960
+      - 1961
+      - 1962
+      - 1963
+      - 1964
+      - 1965
+      - 1966
+      - 1967
+      - 1968
+      - 1969
+      - 1970
+      - 1971
+      - 1972
+      - 1973
+      - 1974
+      - 1975
+      - 1976
+      - 1977
+      - 1978
+      - 1979
+      - 1980
+      - 1981
+      - 1982
+      - 1983
+      - 1984
+      - 1985
+      - 1986
+      - 1987
+      - 1988
+      - 1989
+      - 1990
+      - 1991
+      - 1992
+      - 1993
+      - 1994
+      - 1995
+      - 1996
+      - 1997
+      - 1998
+      - 1999
+      - 2000
