feat: 指定分布式ID注册到Nacos为永久实例，走CP协议【强一致性】 fix: 修复测试用例无法上传测试覆盖报告

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,7 +55,7 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           verbose: true
-          fail_ci_if_error: false
+          fail_ci_if_error: true
           files: |
             ./laokou-common/laokou-common-core/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-fory/target/site/jacoco/jacoco.xml,
