--- a/laokou-common/laokou-common-coap/pom.xml
+++ b/laokou-common/laokou-common-coap/pom.xml
@@ -22,6 +22,13 @@
       <artifactId>laokou-common-core</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-test</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
