--- a/laokou-cloud/laokou-gateway/pom.xml
+++ b/laokou-cloud/laokou-gateway/pom.xml
@@ -172,6 +172,8 @@
         <configuration>
           <!-- main方法的地址 只需要修改这个地址-->
           <mainClass>org.laokou.gateway.GatewayApp</mainClass>
+          <!-- Docker镜像名称 -->
+          <imageName>${project.artifactId}-native:${project.version}</imageName>
         </configuration>
         <executions>
           <execution>
@@ -185,21 +187,6 @@
         <groupId>org.graalvm.buildtools</groupId>
         <artifactId>native-maven-plugin</artifactId>
         <version>${native-maven-plugin.version}</version>
-        <configuration>
-          <buildArgs combine.children="append">
-            <buildArg>--bundle-create</buildArg>
-          </buildArgs>
-        </configuration>
-        <extensions>true</extensions>
-        <executions>
-          <execution>
-            <id>build-native</id>
-            <goals>
-              <goal>compile-no-fork</goal>
-            </goals>
-            <phase>package</phase>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <groupId>io.fabric8</groupId>
